added copy edits

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 					<span class="soundcite" data-time="57" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts6-miscarriage-intv" data-start="0" data-end="57" data-plays="1">&ldquo;So I found out I was pregnant. And I was overjoyed. I was 23, i had a part-time job at a cafe, I was very broke, but I'm also a very stubborn person who sees meaning in the different events that happen in your life and at the time it seemed like this was something that was meant to happen. And i decided to keep the baby with every part of me wanted that baby. I was so excited to be a mother and to feel the heartbeat and to feel all the physical things that happen inside you. When you're pregnant. i was in love with every moment of it. and then i had what they called a missed miscarriage. Where i woke up one morning and suddenly this little voice that i had inside me was quiet, just wasn't there anymore.&rdquo;</span>
 				</div>
 
-				<p>She didn’t post for a month after the miscarriage. She was grieving. After years of being in an isolated relationship, she was left alone with its fallout.</p>
+				<p>She didn’t post for a month after the miscarriage. She was grieving. After years of being in an isolated relationship, she was left alone with the pain.</p>
 
 				<div class="character">
 					<p>Hans Bekhart</p>
