--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 				<div class="character" id="bubbleGridIntro">
 					<p>Hans Bekhart</p>
-					<span class="soundcite" data-time="58" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts3-women-b" data-start="0" data-end="58" data-plays="1">&ldquo;Growing up as a woman and not having your story told and being told you're less than others is in itself something that is a very powerful motivation for wanting to reclaim a certain narrative. [...] So it's a space that is curated for and by women. It's the stories we're interested in telling each other outside of what is considered the mainstream narrative.&rdquo;</span>
+					<span class="soundcite" data-time="58" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts3-women-b" data-start="0" data-end="58" data-plays="1">&ldquo;Growing up as a woman and not having your story told and being treated as less than others is in itself something that is a very powerful motivation for wanting to reclaim a certain narrative. [...] So it's a space that is curated for and by women. It's the stories that we're interested in telling each other that exist outside of what would be considered the mainstream narrative.&rdquo;</span>
 				</div>
 
 				<p>For Bekhart, this kind of community existed on Live Journal. Between 2005 and 2009, Bekhart posted around 667 journal entries and fan-fiction stories.</p>
@@ -203,7 +203,7 @@
 
 				<div class="character">
 					<p>Morgan Dawn</p>
-					<span class="soundcite" data-time="68" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts1b" data-start="0" data-end="68" data-plays="1">&ldquo;One of the things about live journal that sort of attracted a lot of people was that you’d be reading their blog and there would be a story they would have written, and then the next post would be a personal post about their children, or their pets, or their health, or their job. For me, I actually grew to like it because it made me feel like I was actually connection with someone real rather than just another person who like Sam Winchester or Dean Winchester.&rdquo;</span>
+					<span class="soundcite" data-time="68" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts1b" data-start="0" data-end="68" data-plays="1">&ldquo;One of the things about live journal that sort of attracted a lot of people was that you’d be reading their blog and there would be a story they would have written, and then the next entry would be a post would be a personal post about their children, or their pets, or their health, or their job. For me, I really grew to like it because it made me feel like I was actually connecting with a real human being instead of just someone who liked Sam Winchester or Dean Winchester.&rdquo;</span>
 				</div>
 
 				<div class="character">
@@ -215,12 +215,12 @@
 
 				<div class="character">
 					<p>Hans Bekhart</p>
-					<span class="soundcite" data-time="77" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts5-boyfriend-d" data-start="0" data-end="77" data-plays="1">&ldquo;So my boyfriend at the time who was my fiance for a bit isolated me from my friends because he was very threatened by my spending any time with anyone other than him. If I hung out with my high school friends, it was inevitably a fight afterwards. And to have to defend yourself over and over again "it's not like that" they do like me is exhausting. It just became easier not to fight. So I could go online and have friends there instead and it wasn't threatening because they’re not going to try and seduce me or whatever dumb thing he had in his head.&rdquo;</span>
+					<span class="soundcite" data-time="77" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts5-boyfriend-d" data-start="0" data-end="77" data-plays="1">&ldquo;So my boyfriend at the time isolated me from my friends because he was very threatened by me spending  time with anybody other than him. So if I hung out with my friends from high school, it was inevitably a fight afterwards. To have to defend yourself over and over again 'it's not like that. They do like me' is exhausting. It just became easier not to fight. So I could go online and have friends there instead and it wasn't threatening because they’re not going to try to seduce me or whatever dumb thing he had in his head.&rdquo;</span>
 				</div>
 
 				<div class="character">
 					<p>Morgan Dawn</p>
-					<span class="soundcite" data-time="37" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts2b" data-start="0" data-end="37" data-plays="1">&ldquo;I remember her talking about her boyfriend, i remember not feeling comfortable.He was an individual who was not in her best interest. in other words there was control, there was negativity, i remember he was making her feel small.&rdquo;</span>
+					<span class="soundcite" data-time="37" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts2b" data-start="0" data-end="37" data-plays="1">&ldquo;I remember her talking about her boyfriend, I remember not feeling comfortable.He was an individual who was not in her best interest, is the nicest way I can put this, in other words there was control and there was negativity. He was putting her down; he was making her feel small.&rdquo;</span>
 				</div>
 
 				<p>The more Bekhart threw herself into her community, the more it grew. In one of her most active years, she had been posting roughly 17 times every month.</p>
@@ -250,7 +250,7 @@
 
 				<div class="character">
 					<p>Hans Bekhart</p>
-					<span class="soundcite" data-time="57" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts6-miscarriage-intv" data-start="0" data-end="57" data-plays="1">&ldquo;So I found out I was pregnant. And I was overjoyed. I was 23, i had a part-time job at a cafe, I was very broke, but I'm also a very stubborn person who sees meaning in the different events that happen in your life and at the time it seemed like this was something that was meant to happen. And i decided to keep the baby with every part of me wanted that baby. I was so excited to be a mother and to feel the heartbeat and to feel all the physical things that happen inside you. When you're pregnant. i was in love with every moment of it. and then i had what they called a missed miscarriage. Where i woke up one morning and suddenly this little voice that i had inside me was quiet, just wasn't there anymore.&rdquo;</span>
+					<span class="soundcite" data-time="57" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts6-miscarriage-intv" data-start="0" data-end="57" data-plays="1">&ldquo;So I found out I was pregnant and I was overjoyed. I was 23, I was very broke, but I'm also a very stubborn person who sees meaning in the different events that happen in your life and at the time it seemed like this was something that was meant to happen. Every part of me wanted that baby. I was so excited to be a mother and, you know, to feel the heartbeat and to feel all the physical things that happen inside you when you're pregnant. I was in love with every moment of it. And then I had what is called a missed miscarriage where I woke up one morning and suddenly this little voice, this little feeling that I had inside me was quiet, just wasn't there anymore.&rdquo;</span>
 				</div>
 
 				<p>She didn’t post for a month after the miscarriage. She was grieving. After years of being in an isolated relationship, she was left alone with the pain.</p>
@@ -266,7 +266,7 @@
 
 				<div class="character">
 					<p>Hans Bekhart</p>
-					<span class="soundcite" data-time="62" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts9-angryinternetc" data-start="0" data-end="62" data-plays="1">&ldquo;I didn't know anybody who had had a miscarriage. So what happened online was that people started emailing me that had read my fan fiction and had become friends to tell me that they had had 2 miscarriages, that they had had 5 miscarriages, it was something that still hurt them, it was something they healed from, it became something that I could experience with people who knew what it felt like. </br> </br> The first person that ever made me feel angry about what had happened to me was somebody I knew in fandom. After the breakup I had posted about it and there were dozens of people saying 'gosh, that's so sad. I'm so sorry for you.' and one person said 'Fuck that guy. That guy did wrong by you. These people are doing wrong by you.'</br></br> I don't think she has any idea about how much that meant to me and how transformative it was. Because I didn't think I could be angry on my own behalf. I didn't think that I deserved it&rdquo;</span>
+					<span class="soundcite" data-time="62" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts9-angryinternetc" data-start="0" data-end="62" data-plays="1">&ldquo;I didn't know anybody that had had a miscarriage. So what happened online was that people started emailing me that had read my fan fiction to tell me that they had had 2 miscarriages, that they had had 5 miscarriages. It was something that still hurt them or was something they healed from. It became something that I could experience with people who knew what it felt like. </br> </br> The first person that ever made me feel angry about what had happened to me was somebody that I knew in fandom. After my breakup, you know,there's dozens of people saying 'gosh, that's so sad. I'm so sorry for you. Wow, you must be so sad' and one person said 'I feel like I'm going to sound like an asshole but fuck that guy. That guy did wrong by you.'</br></br> I don't think she has any idea about how much that meant to me and how transformative that was because I didn't think I could be angry on my own behalf. I didn't think that I deserved it.&rdquo;</span>
 				</div>
 
 				
@@ -275,7 +275,7 @@
 
 				<div class="character">
 					<p>Hans Bekhart</p>
-					<span class="soundcite" data-time="23" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts10-ourstoriesworthtellingb" data-start="0" data-end="23" data-plays="1">&ldquo;The support and validation you can find in online circles from the stresses and stagnation from your real life to a validation that you are a storyteller and that the content and narrative you wanna tell is valid, i don't think that can be overstated.&rdquo;</span>
+					<span class="soundcite" data-time="23" data-url="http://quantifiedselfie.us/yourfan/assets/hb-cuts10-ourstoriesworthtellingb" data-start="0" data-end="23" data-plays="1">&ldquo;The support and validation you can find in online circles f rom the stresses and stagnation and pain of your real life to a validation that you are a storyteller and that the content and narrative that you wanna tell is valid, I don't think that can be overstated.&rdquo;</span>
 				</div>
 
 				
