--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 
 				<p>For her fans, it was a way to revel in their common love for Supernatural, to explore the show’s characters further, and to get to know the person who wrote them.</p> 
 
-				<p>Here’s Morgan Dawn, one of Bekhart’s followers at the time.</p> 
+				<p>Here’s one of Bekhart’s followers at the time.</p> 
 
 				<div class="character">
-					<p>Morgan Dawn</p>
+					<p>Bekhart's follower</p>
 					<span class="soundcite" data-time="68" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts1b" data-start="0" data-end="68" data-plays="1">&ldquo;One of the things about live journal that sort of attracted a lot of people was that you’d be reading their blog and there would be a story they would have written, and then the next entry would be a post would be a personal post about their children, or their pets, or their health, or their job. For me, I really grew to like it because it made me feel like I was actually connecting with a real human being instead of just someone who liked Sam Winchester or Dean Winchester.&rdquo;</span>
 				</div>
 
@@ -219,7 +219,7 @@
 				</div>
 
 				<div class="character">
-					<p>Morgan Dawn</p>
+					<p>Bekhart's follower</p>
 					<span class="soundcite" data-time="37" data-url="http://quantifiedselfie.us/yourfan/assets/md-cuts2b" data-start="0" data-end="37" data-plays="1">&ldquo;I remember her talking about her boyfriend, I remember not feeling comfortable.He was an individual who was not in her best interest, is the nicest way I can put this, in other words there was control and there was negativity. He was putting her down; he was making her feel small.&rdquo;</span>
 				</div>
 
